third_party/rust/chromium_crates_io/vendor/parity-scale-codec-v3/tests/max_encoded_len_ui/incomplete_attr.rs
use parity_scale_codec::{Encode, MaxEncodedLen};

#[derive(Encode, MaxEncodedLen)]
#[codec(crate)]
struct Example;

fn main() {
	let _ = Example::max_encoded_len();
}
